cluster-operator/istio/istio-lab/istio/resilience/destination-rule-go-cb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
      http:
        http2MaxRequests: 10
        http1MaxPendingRequests: 10
    outlierDetection:
      consecutiveErrors: 3
      interval: 3s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
