cluster-operator/istio/istio-lab/istio/resilience/destination-rule-go-lb-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
        portLevelSettings:
          - port:
              number: 80
            loadBalancer:
              simple: RANDOM
