cluster-operator/istio/istio-lab/istio/resilience/destination-rule-go-pool-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 2
        maxRetries: 3
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
