cluster-operator/istio/istio-lab/istio/resilience/destination-rule-go-pool-tcp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
        connectTimeout: 30ms
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
