cluster-operator/istio/istio-lab/istio/resilience/virtual-service-httpbin-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin
  http:
    - route:
        - destination:
            port:
              number: 8000
            host: httpbin
      retries:
        attempts: 3
        perTryTimeout: 2s
      timeout: 500ms
