cluster-operator/istio/istio-lab/istio/resilience/virtual-service-node-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
    - service-node
  http:
    - route:
        - destination:
            host: service-node
      timeout: 500ms
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,503,409
